fixed issue #69 partly, still needs to limit but link is now there

--- a/templates/scaffolding.html
+++ b/templates/scaffolding.html
@@ -24,7 +24,7 @@
               <li>
                 <a href="{% url 'bet-history' %}">My Bet History</a>
               <li>
-                <a href="{% url 'active-tournament-list' %}">My Tournaments</a>
+                <a href="{% url 'user-tournament-list' %}">My Tournaments</a>
               </li>
               <li><a href="">{{ user }}</a></li>
             </ul>
