--- a/templates/wagers/home.html
+++ b/templates/wagers/home.html
@@ -25,7 +25,7 @@
       <div class="span6">
         <div class="small-info-box">
           <div class="info-header">
-            <h3>Tournaments I'm Running</h3>
+            <h3><a href="{% url 'user-tournament-list' %}">Tournaments I'm Running</a></h3>
           </div>
           <ol class="unstyled tourney-info">
             {% for tourney in admin_tourneys %}     
@@ -44,10 +44,10 @@
         </div>
         <div class="small-info-box">
           <div class="info-header">
-            <h3>Tournaments I've Ran</h3>
+            <h3><a href="{% url 'user-tournament-list' %}">Tournaments I've Ran</a></h3>
           </div>
           <ol class="unstyled tourney-info">
-            {% for tourney in admin_tourneys %}     
+            {% for tourney in ran_tourneys %}     
               <li>{% include 'wagers/tournaments/snippets/tournament-info.html' %}</li>
             {% endfor %}
           </ol>
@@ -56,7 +56,7 @@
       <div class="span6">
         <div class="small-info-box">
           <div class="info-header">
-            <h3>Tournaments I'm Playing In</h3>
+            <h3><a href="{% url 'user-tournament-list' %}">Tournaments I'm Playing In</a></h3>
           </div>
           <ol class="unstyled tourney-info">
             {% for tourney in playing_tourneys %}     
@@ -73,7 +73,7 @@
         </div>
         <div class="small-info-box">
           <div class="info-header">
-            <h3>Tournaments I've Played In</h3>
+            <h3><a href="{% url 'user-tournament-list' %}">Tournaments I've Played In</a></h3>
           </div>
           <ol class="unstyled tourney-info">
             {% for tourney in played_tourneys %}     
