--- a/templates/registration/snippets/login_form.html
+++ b/templates/registration/snippets/login_form.html
@@ -26,8 +26,7 @@
           {% endif %}
         </div>
       </div>
-      <input name="next" type="hidden" value="{% if next%}{{ next }}{% else %}{% url 'user-tournament-list' %}{% endif %}" />
-
+      <input name="next" type="hidden" value="{% if request.GET.next %}{{ next }}{% else %}{{ next }}{% endif %}" />
       <button class="btn btn-large btn-primary btn-redg span12" type="submit">Sign In</button>
     </div>
   </fieldset>
