Made bet.html usable. Closes issue #68.

--- a/templates/wagers/propositions/bet.html
+++ b/templates/wagers/propositions/bet.html
@@ -2,8 +2,6 @@
 {% block content %}
 
 <div class="container">
-  <form>
-  {{ form }}
-  </form>
+  {% include 'wagers/propositions/snippets/prop.html' %}
 </div>
 {% endblock %}
