--- a/templates/scaffolding.html
+++ b/templates/scaffolding.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/site_media/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="/site_media/css/jquery.simple-dtpicker.css" rel="stylesheet" media="screen">
+    <link rel="shortcut icon" href="/site_media/img/favicon.ico" />
     <link href="/site_media/css/officeprops.css" rel="stylesheet" media="screen">
 	  {% analytical_head_top %}
     {% analytical_head_bottom %}
@@ -16,29 +17,39 @@
     <div id="wrapper">
       <header>
         <div class="container navbar">
-          <a class="brand" href="/"><span class="brand1">Office</span> <span class="brand2">Props</span></a>
-          {% if user.is_authenticated %}
-            <form class="navbar-form pull-right" action="/logout" method="POST">
-              {% csrf_token %}
-              <input type="hidden" name="next" value="{% url 'home' %}">
-              <input type="submit" class="btn" value="Sign Out" />
-            </form>
+            <span class="brand">
+              <img src="site_media/img/mouselogo.png" alt="Mouse Logo">
+              <span class="brand1"> Office</span>
+              <span class="brand2">Props</span>
+            </span>
+            {% if user.is_authenticated %}
+              <ul class="nav pull-right">
+                <li>
+                  <a href="{% url 'bet-history' %}"><strong>My Bet History</strong></a>
+                <li>
+                  <a href="{% url 'user-tournament-list' %}"><strong>My Tournaments</strong></a>
+                </li>
+                <li><a href=""><strong>{{ user }}</strong></a></li>
+                <li>
+                  <form class="navbar-form" action="/logout" method="POST">
+                  {% csrf_token %}
+                  <input type="hidden" name="next" value="{% url 'home' %}">
+                  <input type="submit" class="btn" value="Sign Out" />
+                </form>
+              </li>
+            </ul>
+            {% else %}
             <ul class="nav pull-right">
               <li>
-                <a href="{% url 'bet-history' %}"><strong>My Bet History</strong></a>
-              <li>
-                <a href="{% url 'user-tournament-list' %}"><strong>My Tournaments</strong></a>
+                <form class="navbar-form" action="/login" method="GET">
+                  <input type="hidden" name="next" value="{% if tourney %}{{ tourney.get_absolute_url }}{% else %}{% url 'home' %}{% endif %}">
+                  <button class="btn"><b>Sign In</b></button>
+                </form>
               </li>
-              <li><a href=""><strong>{{ user }}</strong></a></li>
             </ul>
-          {% else %}
-            <form class="navbar-form pull-right" action="/login" method="GET">
-              <input type="hidden" name="next" value="{% if tourney %}{{ tourney.get_absolute_url }}{% else %}{% url 'home' %}{% endif %}">
-              <button class="btn"><b>Sign In</b></button>
-            </form>
-          {% endif %}
-        </div>
-      </header>
+            {% endif %}
+      </div>
+    </header>
      {% if messages %}
         <div class="container">
           <section id="alerts">
