--- a/templates/scaffolding.html
+++ b/templates/scaffolding.html
@@ -17,11 +17,11 @@
     <div id="wrapper">
       <header>
         <div class="container navbar">
-            <span class="brand">
+            <a class="brand" href="{% url 'home' %}">
               <img src="/site_media/img/mouselogo.png" alt="Mouse Logo">
               <span class="brand1"> Office</span>
               <span class="brand2">Props</span>
-            </span>
+            </a>
             {% if user.is_authenticated %}
               <ul class="nav pull-right">
                 <li>
