--- a/templates/wagers/propositions/snippets/admin_prop.html
+++ b/templates/wagers/propositions/snippets/admin_prop.html
@@ -1,17 +1,76 @@
-<div>
-  <h3><a href="{% url 'payout-proposition' tourney.uuid prop.id %}">{{ prop }}</a> <small>{{ prop.notes }}</small></h3>
-  {% if prop.is_open %}
-    <form class="form-inline" style="display:inline;" action="{% url 'close-proposition' tourney.uuid prop.id %}" method="POST">
-      {% csrf_token %}
-      <input type="hidden" value="{{prop.id}}" name="id">
-      <input class="btn" type="submit" value="Close Prop">
+<div class="admin-game">
+  <div class="row-fluid">
+
+    <div class="span2">
+      <form method="POST" action="{% url 'payout-proposition' tourney.uuid prop.id %}">
+        {% csrf_token %}
+        <input type="hidden" name="outcome" value="True">
+        <button class="btn btn-primary input-block-level">Declare {{ prop.team_a }} the winner.</button>
+      </form>
+    </div>
+    <div class="span1" style="text-align: center;">vs</div>
+    <div class="span2">
+      <form method="POST" action="{% url 'payout-proposition' tourney.uuid prop.id %}">
+        {% csrf_token %}
+        <input type="hidden" name="outcome" value="False">
+        <button class="btn btn-primary input-block-level">Declare {{ prop.team_b }} the winner.</button>
+      </form>
+    </div>
+  </div>
+
+  <div class="row-fluid">
+    <form>
+      <b>Opens at:</b> {% if prop.open_wager_at %}{{ prop.open_wager_at }}{% else %}None{% endif %} <button href="#modal-opendate-{{ prop.id }}" role="button" class="btn" data-toggle="modal"><i class="icon-calendar"></i>Edit</button>
+      <div id="modal-opendate-{{ prop.id }}" class="modal hide fade">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" area-hidden="true">&times;</button>
+          <h3>Change Schedule of {{ prop }}</h3>
+        </div>
+        <div class="modal-body">
+          <input class="datetime-input" />
+        </div>
+        <div class="modal-footer">
+          <a href="#" data-dismiss="modal" class="btn">Close</a>
+          <a href="#" class="btn btn-primary">Save changes</a>
+        </div>
+      </div>
     </form>
-  {% else %}
-    <form class="form-inline" style="display:inline;" action="{% url 'open-proposition' tourney.uuid prop.id %}" method="POST">
-      {% csrf_token %}
-      <input type="hidden" value="{{prop.id}}" name="id">
-      <input class="btn" type="submit" value="Open Prop">
+    <form>
+      <b>Closes at:</b> {% if prop.schedule.close_wager_at %}{{ prop.schedule.close_wager_at }}{% else %}None{% endif %} <button href="#modal-closedate-{{ prop.id }}" role="button" class="btn" data-toggle="modal"><i class="icon-calendar"></i>Edit</button>
+      <div id="modal-closedate-{{ prop.id }}" class="modal hide fade">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" area-hidden="true">&times;</button>
+          <h3>Change Schedule of {{ prop }}</h3>
+        </div>
+        <div class="modal-body">
+          <input class="datetime-input" />
+        </div>
+        <div class="modal-footer">
+          <a href="#" data-dismiss="modal" class="btn">Close</a>
+          <a href="#" class="btn btn-primary">Save changes</a>
+        </div>
+      </div>
     </form>
-  {% endif %}
+  </div>
+
+  <div class="row-fluid">
+    <div class="span5">
+      {% if not prop.is_paid %}
+        {% if prop.is_open %}
+        <form method="POST" action="{% url 'close-proposition' tourney.uuid prop.id %}">
+          {% csrf_token %}
+          <input type="hidden" name="id" value="{{ prop.id }}" />
+          <button class="btn btn-primary input-block-level">Manually Close Proposition</button>
+        </form>
+        {% else %}
+        <form method="POST" action="{% url 'open-proposition' tourney.uuid prop.id %}">
+          {% csrf_token %}
+          <input type="hidden" name="id" value="{{ prop.id }}" />
+          <button class="btn btn-primary input-block-level">Manually Open Proposition</button>
+        </form>
+        {% endif %}
+      {% endif %}
+    </div>
+  </div>
 </div>
 
