--- a/templates/wagers/propositions/snippets/admin_prop.html
+++ b/templates/wagers/propositions/snippets/admin_prop.html
@@ -23,18 +23,39 @@
   </div>
 
   <div class="row-fluid">
-    <div class="span5">
-      <form method="POST" action="{% url 'change-schedule' tourney.uuid prop.id %}">  
+    <div class="span8">
+      <form method="POST" action="{% url 'change-schedule' tourney.uuid prop.id %}">
+      <div>
         <label>Opens on</label> 
         <div class="input-append">
           <input type="text" value="{% if prop.schedule.open_wager_at %}{{ prop.schedule.open_wager_at }}{% else %}None{% endif %}" disabled/> 
           <button href="#modal-schedule-{{ prop.id }}" role="button" class="btn" data-toggle="modal"><i class="icon-calendar"></i>Edit</button>
+        </div>
+        <div style="float: right; position: relative; height: 80px; top:50%;">
+          {% if not prop.is_paid %}
+            <b>or</b>
+            {% if prop.is_open %}
+            <form class="form form-inline" method="POST" action="{% url 'close-proposition' tourney.uuid prop.id %}">
+              {% csrf_token %}
+              <input type="hidden" name="id" value="{{ prop.id }}" />
+              <button class="btn">Manually Close Proposition</button>
+            </form>
+            {% else %}
+            <form class="form-inline" method="POST" action="{% url 'open-proposition' tourney.uuid prop.id %}">
+              {% csrf_token %}
+              <input type="hidden" name="id" value="{{ prop.id }}" />
+              <button class="btn">Manually Open Proposition</button>
+            </form>
+            {% endif %}
+          {% endif %}
         </div>
         <label>Closes on</label>
         <div class="input-append">
            <input type="text" value="{% if prop.schedule.close_wager_at %}{{ prop.schedule.close_wager_at }}{% else %}None{% endif %}" disabled/>
           <button href="#modal-closedate-{{ prop.id }}" role="button" class="btn" data-toggle="modal"><i class="icon-calendar"></i>Edit</button>
         </div>
+
+      </div>
 
 
       <div id="modal-schedule-{{ prop.id }}" class="modal hide fade">
@@ -60,23 +81,6 @@
           <button type="submit" class="btn btn-primary">Save changes</button>
         </div>
       </div>
-    </div>
-    <div class="span7">
-      {% if not prop.is_paid %}
-        {% if prop.is_open %}
-        <form class="form form-inline" method="POST" action="{% url 'close-proposition' tourney.uuid prop.id %}">
-          {% csrf_token %}
-          <input type="hidden" name="id" value="{{ prop.id }}" />
-          <button class="btn">Manually Close Proposition</button>
-        </form>
-        {% else %}
-        <form class="form-inline" method="POST" action="{% url 'open-proposition' tourney.uuid prop.id %}">
-          {% csrf_token %}
-          <input type="hidden" name="id" value="{{ prop.id }}" />
-          <button class="btn">Manually Open Proposition</button>
-        </form>
-        {% endif %}
-      {% endif %}
     </div>
   </div>
 </div>
