--- a/templates/wagers/propositions/snippets/admin_prop.html
+++ b/templates/wagers/propositions/snippets/admin_prop.html
@@ -30,12 +30,11 @@
         <div class="input-append">
           <input type="text" value="{% if prop.schedule.open_wager_at %}{{ prop.schedule.open_wager_at }}{% else %}None{% endif %}" disabled/> 
           <button href="#modal-schedule-{{ prop.id }}" role="button" class="btn" data-toggle="modal"><i class="icon-calendar"></i>Edit</button>
-        </div>
-        
+        </div>   
         <label>Closes on</label>
         <div class="input-append">
            <input type="text" value="{% if prop.schedule.close_wager_at %}{{ prop.schedule.close_wager_at }}{% else %}None{% endif %}" disabled/>
-          <button href="#modal-closedate-{{ prop.id }}" role="button" class="btn" data-toggle="modal"><i class="icon-calendar"></i>Edit</button>
+          <button href="#modal-schedule-{{ prop.id }}" role="button" class="btn" data-toggle="modal"><i class="icon-calendar"></i>Edit</button>
         </div>
         <div id="modal-schedule-{{ prop.id }}" class="modal hide fade">
           <div class="modal-header">
