Changing schedules of auto generated props has less problems now.

--- a/templates/wagers/propositions/snippets/admin_prop.html
+++ b/templates/wagers/propositions/snippets/admin_prop.html
@@ -46,11 +46,11 @@
             <div class="row-fluid">
               <div class="span6">
                 <label>Open on</label>
-                <input name="open_wager_at" class="datetime-input" />
+                <input type="text" name="open_wager_at" class="datetime-input" />
               </div>
               <div class="span6">
                 <label>Close on</label>
-                <input name="close_wager_at" class="datetime-input" />
+                <input type="text" name="close_wager_at" class="datetime-input" />
               </div>
             </div>
           </div>
