modified the tagline and 2 bottom descriptions

--- a/templates/wagers/admin_landing.html
+++ b/templates/wagers/admin_landing.html
@@ -4,8 +4,8 @@
   <div class="container">
     <div class="row-fluid">
 			<div class="span8">
-        <h1 class="heading">Coordinate Betting, With Ease</h2>
-        <p class="subheading">A website to keep track of casual betting at the office, from who forgot to bet all the way to who won the wagers.</p>
+        <h2 class="heading">You pick the Games,<br>We run the Tournaments</h2>
+        <p class="subheading">Pick your game winners, invite your friends, go daily, weekly or all season long, email alerts, social media and more!</p>
       </div>
       <div class="span4">
        	{% with legend="" %}
@@ -21,13 +21,13 @@
     <div class="row-fluid">
       <div class="span4 teaser">
         <img src="/site_media/img/icons/Clock.png">
-        <h2>Save Time</h2>
-        <p>You don't have to spend hours asking people what they are betting on. People get to bet when its convenient for them.</p>
+        <h2>Automated Reporting</h2>
+        <p>Daily and Weekly Winners, You pick the Games - We tally the scores and let you know how it went.</p>
       </div>
       <div class="span4 teaser">
         <img src="/site_media/img/icons/Gear.png">
-        <h2>Gain Freedom</h2>
-        <p>For some sports, you don't even have to tell us who won. We can figure that out. Just tell us what you want to bet on.</p>
+        <h2>Make it a Party</h2>
+        <p>Invite your Friends, Challenge your Enemies, use email, social media, or make a public challenge.</p>
       </div>
       <div class="span4 teaser">
         <img src="/site_media/img/icons/Scanner.png">
