put a simple link on the share tournament page

--- a/templates/wagers/tournaments/share.html
+++ b/templates/wagers/tournaments/share.html
@@ -3,7 +3,7 @@
   <div class="container">
     <section>
       <h1>How to share</h1>
-      <p>To share the tournament with someone just give them this link: officeprops.com{% url 'tournament-details' tourney.uuid %}</p>
+      <p>To share the tournament with someone just give them this link: <a href="officeprops.com{% url 'tournament-details' tourney.uuid %}"></a></p>
       <p><a href="{% url 'tournament-details' tourney.uuid %}">Go to the tournament details page.</a></p>
     </section>
   </div>
